# dead-simple-tabletop

./: README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/(platform)/: layout.tsx
app/(platform)/dashboard/: page.tsx
app/(platform)/sheet/[id]/: page.tsx
app/app/: page.tsx
app/dashboard/: page.tsx
app/game/: page.tsx
app/game/[id]/: page.tsx
app/login/: layout.tsx  page.tsx
app/sheet/: page.tsx
app/sheet/[id]/: page.tsx
backend/: .gitignore  Cargo.toml  index.ts  package-lock.json  package.json  tsconfig.json
backend/controllers/: games.ts  login.ts  sheets.ts  users.ts
backend/src/: index.ts  main.rs
backend/src/controllers/: games.ts  login.ts  sheet.ts  sheets.ts  users.ts
backend/src/types/: index.d.ts
backend/types/express/: index.d.ts
backend/util/: authentication.ts  db.ts  errorHandler.ts  errorhandler.ts
components/: LogoutButton.tsx  header.tsx  login.tsx
util/: axios.tsx
